src/components/WarningPopup.css
/* Popup style */
.popup-box {
  position: fixed;
  background: #00000050;
  width: 100%;
  height: 100vh;
  top: 0;
  left: 0;
}
 
.box {
  position: relative;
  width: 70%;
  margin: 0 auto;
  height: auto;
  max-height: 70vh;
  margin-top: calc(100vh - 85vh - 20px);
  background: #fff;
  border-radius: 4px;
  padding: 20px;
  border: 1px solid #999;
  overflow: auto;
}
 
.close-icon {
  content: 'X';
  cursor: pointer;
  position: fixed;
  align-items: center;
  align-self: center;
  right: calc(15% - 30px);
  top: calc(100vh - 85vh - 33px);
  background: #ededed;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  line-height: normal;
  text-align: center;
  border: 1px solid #999;
  font-size: 24px;
}

.title {
  color:rgb(214, 214, 59);
}

